配置数据库

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <script href="../static/js/bootstrap.min.js" type="application/javascript"></script>
+    <script>
+
+    </script>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -17,7 +20,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Java社区</a>
+            <a class="navbar-brand">Java社区</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -44,7 +47,7 @@
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="https://github.com/login/oauth/authorize?client_id=c4a94372e9030237102e&redirect_uri=https://8080/callback&scope=user&state=1">登录</a></li>
+                <li><a href="https://github.com/login/oauth/authorize?client_id=c4a94372e9030237102e&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">个人中心<span class="caret"></span></a>
                     <ul class="dropdown-menu">
