--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/mycss.css">
     <script href="../static/js/bootstrap.min.js" type="application/javascript"></script>
     <script>
 
@@ -47,11 +48,8 @@
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
-                <li th:if="${session ==null}">
+                <li th:if="${session.user ==null}">
                     <a href="https://github.com/login/oauth/authorize?client_id=c4a94372e9030237102e&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
-                </li>
-                <li th:if="${session.user != null}">
-                <a href="">发布</a>
                 </li>
                 <li class="dropdown" th:if="${session.user != null}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span></a>
@@ -67,5 +65,30 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-9 col-md-12 col-sm-12">
+            <h3><span class="glyphicon glyphicon-tags" aria-hidden="true"></span>发起</a></h3>
+            </hr>
+            <form action="/publish" method="post">
+                <div class="form-group">
+                    <label for="title">问题标题（简单扼要）：</label>
+                    <input type="text" name="title" class="form-control" id="title" placeholder="问题标题">
+                </div>
+                <div class="form-group">
+                    <label for="content">问题内容（必填）：</label>
+                    <textarea name="content" class="form-control" id="content" rows="10"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="sp">添加标签：</label>
+                    <input name="tag" type="text" class="form-control" id="sp" placeholder="标签">
+                </div>
+                <button type="submit" class="btn btn-default btn-fabu">确认发布</button>
+            </form>
+        </div>
+        <div class="col-lg-3 col-md-12 col-sm-12"></div>
+    </div>
+</div>
+<span th:text="${erro}"></span>
 </body>
 </html>
