--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/mycss.css">
     <script href="../static/js/bootstrap.min.js" type="application/javascript"></script>
     <script>
 
@@ -20,7 +21,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand">Java社区</a>
+            <a class="navbar-brand" href="/">Java社区</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -44,14 +45,14 @@
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Search">
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-default">查询</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
-                <li th:if="${session ==null}">
+                <li th:if="${session.user == null}">
                     <a href="https://github.com/login/oauth/authorize?client_id=c4a94372e9030237102e&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
                 </li>
                 <li th:if="${session.user != null}">
-                <a href="">发布</a>
+                <a href="/publishIndex">发布</a>
                 </li>
                 <li class="dropdown" th:if="${session.user != null}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span></a>
@@ -67,5 +68,26 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-9 col-md-12 col-sm-12">
+            <h3><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>发现</a></h3>
+            </hr>
+
+            <div class="media" th:each="ent : ${quesList}">
+                <div class="media-left">
+                    <a href="#">
+                        <img class="media-object" src="...">
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading" th:text="${ent.title}"></h4>
+                    <span th:text="${ent.content}"></span>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-12 col-sm-12"></div>
+    </div>
+</div>
 </body>
 </html>
