--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/mycss.css">
     <script src="js/jquery-3.4.1.min.js"></script>
-    <script href="js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script>
     </script>
 </head>
@@ -22,7 +22,7 @@
             <div class="media" th:each="ent : ${quesList}">
                 <div class="media-left">
                     <a>
-                        <img class="media-object" src="${ent.creator.avatarUrl}">
+                        <img class="img-circle" style="height: 40px" src="https://dss0.bdstatic.com/-0U0bnSm1A5BphGlnYG/tam-ogel/299c55e31d7f50ae4dc85faa90d6f445_121_121.jpg">
                     </a>
                 </div>
                 <div class="media-body">
