--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -18,7 +18,7 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a onclick="btn()">Link <span class="sr-only">(current)</span></a></li>
+                <li class="active"><a>Link <span class="sr-only">(current)</span></a></li>
                 <li><a>Link</a></li>
                 <li class="dropdown">
                     <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -53,7 +53,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="/profile/question">我的问题</a></li>
-                        <li><a href="#">退出登录</a></li>
+                        <li><a href="/logout">退出登录</a></li>
                     </ul>
                 </li>
             </ul>
