发布问题回显数据修复

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -22,7 +22,7 @@
             <div class="media" th:each="ent : ${quesList}">
                 <div class="media-left">
                     <a>
-                        <img class="media-object" style="height: 40px" src="https://dss0.bdstatic.com/-0U0bnSm1A5BphGlnYG/tam-ogel/299c55e31d7f50ae4dc85faa90d6f445_121_121.jpg">
+                        <img class="media-object" style="height: 40px" src="https://i2.hdslb.com/bfs/face/393b19032f0c16fefdedcd74fbc7b6b805956dfa.jpg@40w_41h_1c_100q.webp">
                     </a>
                 </div>
                 <div class="media-body">
