--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Getting Started: Serving Web Content</title>
+    <title>问题发布</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
@@ -22,15 +22,15 @@
             <form action="/publish" method="post">
                 <div class="form-group">
                     <label for="title">问题标题（简单扼要）：</label>
-                    <input type="text" name="title" class="form-control" id="title" placeholder="问题标题">
+                    <input type="text" name="title" class="form-control" id="title" th:value="${question.title}">
                 </div>
                 <div class="form-group">
                     <label for="content">问题内容（必填）：</label>
-                    <textarea name="content" class="form-control" id="content" rows="10"></textarea>
+                    <textarea name="content" th:text="${question.content}" class="form-control" id="content" rows="10"></textarea>
                 </div>
                 <div class="form-group">
                     <label for="sp">添加标签：</label>
-                    <input name="tag" type="text" class="form-control" id="sp" placeholder="标签">
+                    <input name="tag" th:value="${question.tag}" type="text" class="form-control" id="sp" placeholder="标签">
                 </div>
                 <button type="submit" class="btn btn-default btn-fabu">确认发布</button>
             </form>
