--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Getting Started: Serving Web Content</title>
+    <title>问题详情</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
@@ -39,7 +39,7 @@
                     <span th:text="${question.content}"></span>
                 </div>
                 <hr>
-                <a>
+                <a href="/publishIndex">
                     <span class="glyphicon glyphicon-pencil">编辑</span>
                 </a>
             </div>
