--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -36,7 +36,7 @@
                     <a href="https://github.com/login/oauth/authorize?client_id=c4a94372e9030237102e&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
                 </li>
                 <li th:if="${session.user != null}">
-                    <a href="/publishIndex">发布</a>
+                    <a href="/publishIndex/">发布</a>
                 </li>
                 <li class="dropdown" th:if="${session.user != null}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" >
