--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -3,11 +3,11 @@
 <head>
     <title>问题发布</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/mycss.css">
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.min.js" type="application/javascript"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/css/mycss.css">
+    <script src="/js/jquery-3.4.1.min.js"></script>
+    <script src="/js/bootstrap.min.js" type="application/javascript"></script>
     <script>
 
     </script>
@@ -20,13 +20,15 @@
             <h3><span class="glyphicon glyphicon-tags" aria-hidden="true"></span>发起</a></h3>
             </hr>
             <form action="/publish" method="post">
+                <input type="hidden" name="id" th:value="${question.id}">
                 <div class="form-group">
                     <label for="title">问题标题（简单扼要）：</label>
-                    <input type="text" name="title" class="form-control" id="title" th:value="${question.title}">
+
+                    <input type="text" name="title" class="form-control" id="title" th:value="${question.title}" placeholder="标题">
                 </div>
                 <div class="form-group">
                     <label for="content">问题内容（必填）：</label>
-                    <textarea name="content" th:text="${question.content}" class="form-control" id="content" rows="10"></textarea>
+                    <textarea name="content" th:text="${question.content}" class="form-control" id="content" rows="10" placeholder="内容"></textarea>
                 </div>
                 <div class="form-group">
                     <label for="sp">添加标签：</label>
